android cutoff fix 6

--- a/css/mobile_responsive.css
+++ b/css/mobile_responsive.css
@@ -28,7 +28,7 @@
         top: 0vmin;
         left: 0vmin;
 
-        margin-bottom: 10.75vmin;
+        margin-bottom: 20vmin;
         
         display: grid;
         grid-template-columns: 1fr;
